<resources>
    <string name="app_name">Cookify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cookify</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="url_home">192.168.0.4</string>
    <string name="url_school">172.18.119.157</string>

    <!-- Searchbar -->
    <string name="search_recipes">Rezepte durchsuchen</string>
    <string name="search_drinks">Drinks durchsuchen</string>
    <string name="search_favorites">Favoriten durchsuchen</string>
    <string name="search_ingredients">Zutaten durchsuchen</string>

    <!-- Dashboard -->
    <string name="recipe">Rezepte</string>
    <string name="recipe_long">Rezepte durchstöbern</string>
    <string name="ingredients">Zutaten</string>
    <string name="ingredients_long">Rezepte basierend auf Zutaten.</string>
    <string name="drinks">Drinks</string>
    <string name="drinks_long">Smoothies, Cocktails, ...</string>
    <string name="favorite">Favoriten</string>
    <string name="favorite_long">Gespeicherte Rezepte durchstöbern.</string>
    <string name="settings">Einstellungen</string>
    <string name="settings_long">Einstellungen verwalten.</string>

    <!-- Detail Page Description -->
    <string name="zubereitung">Zubereitung:</string>
    <string name="zutaten">Zutaten:</string>

    <!-- SettingsActivity -->
    <string name="edit">Bearbeiten</string>
    <string name="test_user_name">Max Mustermann</string>
    <string name="test_email">maxmustermann@gmail.com</string>
    <string name="test_phone_number">0660 123456789</string>
</resources>
