<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/baseline_restaurant_white_18dp"
            android:title="@string/recipe" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/baseline_fastfood_white_18dp"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/baseline_local_bar_white_18dp"
            android:title="@string/drinks" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
